[package]
name = "the_algorithms_rust"
edition = "2021"
version = "0.1.0"

[profile.test]
args = ["--nocapture"]


[dependencies]
lazy_static = "1.4.0"
num-bigint = { version = "0.4", optional = true }
num-traits = { version = "0.2", optional = true }
rand = "0.8"

[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "1.0"

[features]
default = ["big-math"]
big-math = ["dep:num-bigint", "dep:num-traits"]
